generate zip report